--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ typing-inspection==0.4.2
 typing_extensions>=4.0.0
 Werkzeug>=3.0.0
 requests
-psycopg2-binary==2.9.10
+# psycopg2-binary==2.9.10
 Pillow>=10.0.0
 google-auth>=2.0.0
 google-auth-oauthlib>=1.0.0
